--- a/transition-guide/sections/preamble.adoc
+++ b/transition-guide/sections/preamble.adoc
@@ -1,5 +1,3 @@
 == Preamble
 
-=== Purpose
-
-The purpose of this document is to provide technical guidance and additional information for members to transition from GTS to WIS2, in implementing the practices, procedures, and specifications defined in the Manual on WIS (WMO No. 1060), Vol II.
+This publication establishes the provisions for the transition from WIS 1.0 and GTS to WIS 2.0. The provisions for the WIS2 transition provide technical guidance and describe the practices to be followed by Members to implement WIS 2.0 and decommission WIS 1.0 and GTS systems. The practices described in this publication facilitate a smooth implementation of the technical regulation described in the Manual on WMO Information System (WMO No. 1060), Vol II and further explained in the Guide to the WMO Information System (WMO No. 1061) Vol. II.
