--- a/transition-guide/sections/temporary_global_services.adoc
+++ b/transition-guide/sections/temporary_global_services.adoc
@@ -11,7 +11,8 @@ During the transition period, in order to avoid some WIS centres being forced to
 The purpose of the GTS to WIS2 gateway is to enable Members who have migrated to WIS2 and have stopped their GTS systems to continue receiving GTS data from WIS2. This gateway also enables users who are not connected to GTS to access GTS data, during the transition phase, from WIS2. The GTS to WIS2 gateway will forward the GTS traffic it receives to WIS2. In accordance with the WIS2 specification, every data received on one GTS link will be stored on a HTTP(s) endpoint of the Gateway and will generate a WIS2 Notification Message. 
 
 ==== GTS to WIS2 Gateway provider
-The gateway will be provided by Germany's Deutscher Wetterdienst (DWD) and the Japan Meteorological Agency (JMA).
+
+To ensure resilient operation, there will be more than one GTS to WIS2 Gateway.
  
 ==== Technical requirements
 
