--- a/transition-guide/sections/preamble.adoc
+++ b/transition-guide/sections/preamble.adoc
@@ -1,3 +1,3 @@
-== Preamble
+== 1. PREAMBLE
 
-This publication establishes the provisions for the transition from WIS 1.0 and GTS to WIS 2.0. The provisions for the WIS2 transition provide technical guidance and describe the practices to be followed by Members to implement WIS 2.0 and decommission WIS 1.0 and GTS systems. The practices described in this publication facilitate a smooth implementation of the technical regulation described in the Manual on WMO Information System (WMO No. 1060), Vol II and further explained in the Guide to the WMO Information System (WMO No. 1061) Vol. II.
+The present publication establishes the provisions for the transition from the WMO Information System (WIS) 1.0 and GTS to WIS 2.0. The provisions for the WIS2 transition provide technical guidance and describe the practices to be followed by Members to implement WIS 2.0 and decommission the WIS 1.0 and GTS systems. The practices described in this publication facilitate a smooth implementation of the technical regulation described in the https://library.wmo.int/idurl/4/68731[_Manual on WMO Information System_] (WMO No. 1060), Volume II (hereinafter _Manual on WIS_, Volume II), and further explained in the https://library.wmo.int/idurl/4/28988[_Guide to the WMO Information System_] (WMO No. 1061) Volume II (hereinafter _Guide to WIS_, Volume II).
