--- a/transition-guide/index.adoc
+++ b/transition-guide/index.adoc
@@ -1,6 +1,6 @@
 :title: Provisions for the transition from the WMO Information System (WIS)  1.0 and Global Telecommunication System to WIS  2.0 (DRAFT)
 :titletext: {title}
-:version: 2024-07-15
+:version: 2024-07-15-approved by EC-78
 :date: {docdate}
 :copyright: Copyright © 2024 World Meteorological Organization (WMO)
 :doctype: book
@@ -9,10 +9,7 @@
 :toc:
 :toc-placement!:
 :toclevels: 3
-:sectnums:
-:sectnumlevels: 4
 :sectanchors:
-:sectnum-start: 2
 
 = {title}
 
